--- a/index.css
+++ b/index.css
@@ -22,7 +22,8 @@ opacity: 0;
 }
 to {
 opacity: 1;
-}}
+}
+}
 .fadein {
 animation-name: fadein;
 }
@@ -38,10 +39,11 @@ box-shadow: 1px 1px #ccc;
 justify-content: center;
 align-items: center;
 }
-p { 
-line-height: 24px;
+.bar p { 
+display: block;
+line-height: 22px;
 color: #222;
-font-family: "Day Roman", "Times";
+font-family: "Ubuntu Condensed", "Helvetica";
 font-size: 24px;
 font-weight: bold;
 vertical-align: baseline;
@@ -60,6 +62,7 @@ display: inline-block;
 color: #000;
 text-decoration: none;
 }
+
 /* NAVMENU */
 .nav {
 position: fixed;
@@ -108,6 +111,7 @@ float: left;
 .nav ul li:hover {
 background: #aaa;
 }
+
 /* NAVLINKS */
 .navlinks {
 position: fixed;
@@ -131,64 +135,62 @@ display: none;
 display: none;
 }
 .navlinks-mobile {
-position: absolute;
+position: fixed;
 display: block;
 background: none;
 top: 12px;
 right: 10px;
 text-align: center;
 margin: 10px 0px 0px 0px;
-}}
+}
+}
 
 /* HEADER */
-.section {
+.parallax {
 display: flex;
 width: 100%;
 height: 100%;
 margin: 0px 0px 0px 0px;
 padding: 46px 0px 0px 0px;
-align-content: flex-start;
 justify-content: center;
-align-items: flex-start;
-justify-items: center;
+align-content: flex-start;
 }
-.row {
-width: 800px;
+.header {
+width: 768px;
 height: 100%;
 background: transparent;
 margin: 0px 0px 0px 0px;
 padding: 0px 0px 0px 0px;
-justify-items: center;
-align-items: flex-start;
+justify-content: center;
+align-content: flex-start;
 text-align: center;
 }
-/* HEADER IMAGE */
-.header {
-width: 800px;
+/* HEADER LOGO */
+.logo {
+width: 768px;
 max-width: 100%;
 max-height: 100%;
 object-fit: contain;
 }
-.header:hover {
-animation: fadein 1s;
-}
-.header-mobile {
+.logo-mobile {
 height: 300px;
 max-width: 100%;
 max-height: 387px;
 display: none;
 }
 @media screen and (max-width: 768px) {
-.header {
+.logo {
 display:none;
 }
-.header-mobile {
+.logo-mobile {
 display: block;
 width: 768px;
 max-width: 100%;
 max-height: 387px;
 object-fit: contain;
-}}
+}
+}
+
 /* HEADER TITLES */
 h1 {
 margin: 0px 5px 0px 5px;
@@ -200,7 +202,7 @@ font-size: 52px;
 h2 {
 margin: 0px 5px 0px 5px;
 padding: 0px 0px 0px 0px;
-line-height: 29px;
+line-height: 28px;
 color: #333;
 font-family: "Day Roman", "Times";
 font-size: 28px;
@@ -211,8 +213,7 @@ padding: 0px 0px 0px 0px;
 line-height: 20px;
 color: #000;
 font-family: "Day Roman", "Times";
-font-size: 16px;
-font-weight: normal;
+font-size: 20px;
 font-style: italic;
 }
 @media screen and (max-width: 768px) {
@@ -223,31 +224,120 @@ font-size: 6.81vw;
 h2 {
 line-height: 27px;
 font-size: 27px;
-}}
-/* BUTTONS */
-.button {
-line-height: 80px;
+}
+h3 {
+line-height: 16px;
+font-size: 16px;
+}
+}
+
+/* HEADER CALL BUTTONs */
+.call {
+display: inline-block;
+line-height: 20px;
 font-size: 20px;
-margin: 20px 20px;
-padding: 10px 20px;
+margin: 20px 10px;
+padding: 10px 10px;
+background-image: linear-gradient(to top, #eee, #fff);
+border: 1px solid #ddd;
+border-radius: 20px;
+box-shadow: 2px 2px #ccc;
+}
+.call:hover {
+background-image: linear-gradient(to top, #fff, #eee);
+color: #333;
+opacity: 0.7;
+border: 1px solid #bbb;
+box-shadow: none;
+}
+.call:active {
+opacity: 0;
+}
+
+/* FLEXBOX */
+.container {
+display: block;
+margin: 0px 0px 0px 0px;
+padding: 0px 0px 0px 0px;
+width: 100%;
+}
+.row {
+display: flex;
+flex-direction: row;
+flex-wrap: wrap;
+flex-basis: 768px; /* cols starting size */
+flex-grow: 1; 
+flex-shrink: 1;
+width: 768px;
+margin: 0px auto; /* centers row */
+justify-content: center; /* cols on center */
+align-items: flex-start; /* cols on top */
+margin-bottom: 16px;
+}
+.row .col {
+align-items: flex-start;
+flex-grow: 1;
+flex-shrink: 1;
+flex-basis: 50%;
+justify-content: center;
+align-items: center;
+border-radius: 20px;
+}
+.img-div {
+text-align: center;
+}
+.col img {
+max-width: 300px;
+}
+.col h3 {
+font-size: 20px;
+text-align: center;
+margin: 10px 0px 10px 0px;
+padding: 0px 0px 0px 0px;
+}
+p {
+text-align: justify;
+margin: 0px 0px 0px 0px;
+padding: 0px 5% 0px 5%;
+font-family: "Day Roman", "Times";
+font-size: 17px;
+font-weight: normal;
+}
+.button-div {
+text-align: center;
+}
+.button {
+display: inline-block;
+width: 90%;
+line-height:20px
+font-size: 20px;
+margin: 3px 20px;
+padding: 5px 20px;
 background-image: linear-gradient(to top, #eee, #fff);
 border: 1px solid #ddd;
 border-radius: 20px;
 box-shadow: 2px 2px #ccc;
 }
 .button:hover {
-line-height: 20px;
-font-size: 20px;
-margin: 18px 20px;
-padding: 10px 20px;
 background-image: linear-gradient(to top, #fff, #eee);
-color: #444;
+color: #333;
+opacity: 0.7;
 border: 1px solid #bbb;
 box-shadow: none;
 }
 .button:active {
-border: 1px solid #fff;
-color: #aaa;
+opacity: 0;
+}
+@media screen and (max-width: 768px) {
+.row {
+min-width: 300px;
+max-width: 90%;
+}
+.row .col,
+.row [class*=" col-"] {
+flex-grow: 0;
+flex-basis: 100%;
+}
 }
 
 /* CREDITS */
