--- a/index.css
+++ b/index.css
@@ -1,6 +1,9 @@
 /* Based on Wing v1.0.0-beta (http://usewing.ml) */
 /* Copyright to Kabir Shah under MIT License */
 
+/* FONT IMPORT */
+@import url("https://fonts.googleapis.com/css?family=Ubuntu+Condensed");
+
 * {
 box-sizing: border-box;
 margin: 0px 0px 0px 0px;
@@ -113,11 +116,10 @@ background: #fff;
 max-width: 100%;
 min-height: 300px;
 padding: 50px 0px 0px 0px;
-background: no-repeat center center fixed;
-background-size: cover;
+background-attachment: fixed;
+object-fit: none;
 justify-content: center;
 align-content: flex-start;
-box-shadow:  0px -5px 5px 0px rgba(111,111,111, 0.5);
 }
 .header {
 display: inline-block;
@@ -163,7 +165,21 @@ color: #111;
 font-size: 35px;
 font-weight: normal;
 }
-@media screen and (max-width: 768px) {
+@media (min-width: 551px) and (max-width: 768px) {
+h1 {
+line-height: 47px;
+font-size: 47px;
+}
+h2 {
+line-height: 26px;
+font-size: 26px;
+}
+h3 {
+line-height: 22px;
+font-size: 20px;
+}
+}
+@media screen and (max-width: 550px) {
 h1 {
 line-height: 31px;
 font-size: 31px;
@@ -210,10 +226,10 @@ text-align: center;
 @media screen and (max-width: 768px) {
 .row {
 min-width: 300px;
-max-width: 90%;
+max-width: 100%;
 }
 .col {
-max-width: 100%;
+max-width: 50%;
 }
 }
 
@@ -227,13 +243,13 @@ font-weight: bold;
 color: #000;
 }
 h5 {
-font-size: 17px;
+font-size: 16px;
 font-weight: normal;
 text-align: center;
 }
 p {
 text-align: justify;
-font-size: 17px;
+font-size: 16px;
 font-weight: normal;
 }
 a {
@@ -246,14 +262,21 @@ span {
 color: #333;
 font-size: 14px;
 }
+@media screen and (max-width: 768px) {
+p {
+font-size: 14px;
+}
+span {
+font-size: 11px;
+}
+}
 
 /* BUTTONS */
 .button {
 display: inline-block;
 background-image: linear-gradient(to top, #ddd, #fff);
 box-shadow:  0px 3px 3px 0px rgba(111,111,111, 0.5);
-margin: 0px 10px 0px 10px;
-padding: 10px 10px;
+padding: 10px 0px;
 width: 230px;
 border: 1px solid #ccc;
 border-radius: 14px;
@@ -269,7 +292,24 @@ box-shadow: none;
 text-decoration: none;
 color: #777;
 }
+@media screen and (max-width: 768px) {
+.button {
+width: 190px;
+font-size: 17px;
+}
+}
 
+/* PHOTO */
+.photo {
+background: #fff;
+margin: 0px 0px;
+min-width: 300px;
+width: 100%;
+height: 300px;
+background: no-repeat center center;
+background-size: 100% 100%;
+box-shadow:  0px -3px 5px 0px rgba(33,33,33,0.3);
+}
 /* SOCIAL MEDIA */
 .socialmedia {
 display: flex;
